// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ManifestSelection tests can change artifact input type  without crashing 1`] = `
<div>
  <div
    class="exampleWizard"
  >
    <div
      class="StepWizard---main--SGVz StepWizard---navBar--2KYu"
    >
      <div
        class="StepWizard---navBarList--2ILN"
      >
        <div
          class="StepWizard---navStep--2trN StepWizard---completedStep--3BLy"
        >
          <span
            class="bp3-icon bp3-icon-small-tick StyledProps---main--1Wws StyledProps---color--8PuS StyledProps---color-green500--2_VK"
            icon="small-tick"
          >
            <svg
              data-icon="small-tick"
              height="22"
              viewBox="0 0 20 20"
              width="22"
            >
              <desc>
                small-tick
              </desc>
              <path
                d="M15 5c-.28 0-.53.11-.71.29L8 11.59l-2.29-2.3a1.003 1.003 0 00-1.42 1.42l3 3c.18.18.43.29.71.29s.53-.11.71-.29l7-7A1.003 1.003 0 0015 5z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
          <p
            class="StyledProps---font--2ipy Text---lineclamp--qeDh StyledProps---main--1Wws StepWizard---stepName--2M52"
            style="--text-line-clamp: 2; width: 240px;"
          >
            SPECIFY MANIFEST SERVER
          </p>
        </div>
        <div
          class="StepWizard---navStep--2trN StepWizard---activeStep--9-9V"
        >
          <span
            class="StepWizard---number--1LKy"
          >
            2
          </span>
          <p
            class="StyledProps---font--2ipy Text---lineclamp--qeDh StyledProps---main--1Wws StepWizard---stepName--2M52"
            style="--text-line-clamp: 2; width: 240px;"
          >
            MANIFEST SOURCE
          </p>
        </div>
      </div>
      <div
        class="StepWizard---stepDetails--Uaxx"
      >
         
        <div
          class="Layout---vertical--3Szv Layout---layout-spacing-xxlarge--zgL2 StyledProps---main--1Wws StyledProps---padding-small--3f0A"
          style="height: 100%;"
        >
          <p
            class="StyledProps---font--2ipy StyledProps---main--1Wws StyledProps---font-medium--2b-0"
          >
            Configure Manifest Source
          </p>
          <div
            class="OverlaySpinner---overlaySpinner--3Bs3"
          >
            <form
              class="formContainer"
            >
              <div
                class="bp3-form-group"
              >
                <label
                  class="bp3-label"
                  for="identifier"
                >
                  Manifest Identifier
                   
                  <span
                    class="bp3-text-muted"
                  />
                </label>
                <div
                  class="bp3-form-content"
                >
                  <div
                    class="bp3-input-group"
                  >
                    <input
                      autocomplete="off"
                      class="bp3-input"
                      name="identifier"
                      placeholder="Give name to your manifest config"
                      type="text"
                      value="identifier"
                    />
                  </div>
                </div>
              </div>
              <div
                class="bp3-form-group"
              >
                <label
                  class="bp3-label"
                  for="gitFetchType"
                >
                  Commit ID
                   
                  <span
                    class="bp3-text-muted"
                  />
                </label>
                <div
                  class="bp3-form-content"
                >
                  <div
                    class="bp3-popover-wrapper Select---main--1QpB bp3-fill"
                  >
                    <div
                      class="bp3-popover-target"
                    >
                      <div
                        class="bp3-input-group"
                      >
                        <input
                          autocomplete="off"
                          class="bp3-input"
                          name="gitFetchType"
                          placeholder="Search..."
                          style="padding-right: 0px;"
                          type="text"
                          value="Latest from Branch"
                        />
                        <span
                          class="bp3-input-action"
                        >
                          <span
                            class="bp3-icon bp3-icon-caret-down StyledProps---main--1Wws StyledProps---padding-small--3f0A"
                            icon="caret-down"
                          >
                            <svg
                              data-icon="caret-down"
                              height="14"
                              viewBox="0 0 16 16"
                              width="14"
                            >
                              <desc>
                                caret-down
                              </desc>
                              <path
                                d="M12 6.5c0-.28-.22-.5-.5-.5h-7a.495.495 0 00-.37.83l3.5 4c.09.1.22.17.37.17s.28-.07.37-.17l3.5-4c.08-.09.13-.2.13-.33z"
                                fill-rule="evenodd"
                              />
                            </svg>
                          </span>
                        </span>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="bp3-form-group"
              >
                <label
                  class="bp3-label"
                  for="branch"
                >
                  Branch
                   
                  <span
                    class="bp3-text-muted"
                  />
                </label>
                <div
                  class="bp3-form-content"
                >
                  <div
                    class="Layout---horizontal--3rmQ StyledProps---main--1Wws MultiTypeInput---main--AfQw"
                  >
                    <div
                      class="bp3-input-group MultiTypeInput---input--36mQ"
                    >
                      <input
                        class="bp3-input"
                        name="branch"
                        placeholder="Enter branch name here"
                        type="text"
                        value=""
                      />
                    </div>
                    <span
                      class="bp3-popover-wrapper"
                    >
                      <span
                        class="bp3-popover-target"
                      >
                        <button
                          class="MultiTypeInput---btn--1c9a MultiTypeInput---FIXED--18gu"
                        >
                          <span
                            class="bp3-icon StyledProps---main--1Wws StyledProps---color--8PuS StyledProps---color-white--3AwB"
                          >
                            <svg
                              height="12"
                              viewBox="0 0 9 9"
                              width="12"
                            >
                              <path
                                d="M5.61 7.55c.62-.7.3-1.42.18-2.35a.32.32 0 01.1-.29l1.43-1.42a.76.76 0 01.28-.15c.39-.1 1 0 1.28-.29a.34.34 0 000-.51L6.46.12a.33.33 0 00-.52 0c-.28.29-.2.9-.28 1.3a.53.53 0 01-.13.23L4.09 3.12a.29.29 0 01-.28.09c-.89-.11-1.6-.49-2.27.11-.29.26-.29.43 0 .7l1.31 1.34.15.16-.15.15-2.7 2.69a.36.36 0 000 .54.36.36 0 00.54-.05l2.63-2.68.17-.17.17.16c.45.46.9.91 1.36 1.36.21.21.42.22.59.03z"
                                fill="#009dff"
                              />
                            </svg>
                          </span>
                        </button>
                      </span>
                    </span>
                  </div>
                </div>
              </div>
              <div
                class="bp3-form-group"
              >
                <label
                  class="bp3-label"
                  for="filePath"
                >
                  <div
                    class="formLabel"
                  >
                    File / Folder Path
                    <div
                      class="bp3-popover-wrapper"
                    >
                      <div
                        class="bp3-popover-target typeSelector"
                      >
                        <button
                          class="bp3-button bp3-minimal StyledProps---font--2ipy Button---button--4ZD5 Button---iconOnly--_pvt StyledProps---main--1Wws btn"
                          type="button"
                        >
                          <span
                            class="bp3-button-text"
                          >
                            <span
                              class="bp3-icon StyledProps---main--1Wws icon fixed"
                            >
                              <svg
                                height="10"
                                viewBox="0 0 9 9"
                                width="10"
                              >
                                <path
                                  d="M5.61 7.55c.62-.7.3-1.42.18-2.35a.32.32 0 01.1-.29l1.43-1.42a.76.76 0 01.28-.15c.39-.1 1 0 1.28-.29a.34.34 0 000-.51L6.46.12a.33.33 0 00-.52 0c-.28.29-.2.9-.28 1.3a.53.53 0 01-.13.23L4.09 3.12a.29.29 0 01-.28.09c-.89-.11-1.6-.49-2.27.11-.29.26-.29.43 0 .7l1.31 1.34.15.16-.15.15-2.7 2.69a.36.36 0 000 .54.36.36 0 00.54-.05l2.63-2.68.17-.17.17.16c.45.46.9.91 1.36 1.36.21.21.42.22.59.03z"
                                  fill="#009dff"
                                />
                              </svg>
                            </span>
                            <span
                              class="btnText"
                            >
                              Fixed input list
                            </span>
                          </span>
                        </button>
                      </div>
                    </div>
                  </div>
                   
                  <span
                    class="bp3-text-muted"
                  />
                </label>
                <div
                  class="bp3-form-content"
                >
                  <p
                    class="StyledProps---font--2ipy StyledProps---main--1Wws fileHelpText"
                    style="display: flex; align-items: center;"
                  >
                    <span
                      class="bp3-icon bp3-icon-info-sign StyledProps---main--1Wws StyledProps---padding-small--3f0A StyledProps---color--8PuS StyledProps---color-blue450--6C4Y"
                      icon="info-sign"
                    >
                      <svg
                        data-icon="info-sign"
                        height="23"
                        viewBox="0 0 20 20"
                        width="23"
                      >
                        <desc>
                          info-sign
                        </desc>
                        <path
                          d="M10 0C4.48 0 0 4.48 0 10s4.48 10 10 10 10-4.48 10-10S15.52 0 10 0zM9 4h2v2H9V4zm4 12H7v-1h2V8H8V7h3v8h2v1z"
                          fill-rule="evenodd"
                        />
                      </svg>
                    </span>
                    <div>
                      Multiple files can be overlaid together. They are applied in the order specified - first one gets applied first, and the subsequent ones get layered in the order and overrides any previously specified values.
                    </div>
                  </p>
                  <div
                    class="Layout---vertical--3Szv StyledProps---main--1Wws"
                  >
                    <div
                      class="Layout---horizontal--3rmQ StyledProps---main--1Wws StyledProps---flex--2Jz8 StyledProps---flex-distribution-space-between--1TyN"
                      style="align-items: end;"
                    >
                      <div
                        class="Layout---horizontal--3rmQ Layout---layout-spacing-medium--3-Y8 StyledProps---main--1Wws"
                        draggable="true"
                        style="align-items: baseline;"
                      >
                        <div
                          class="bp3-form-group"
                          style="width: 330px;"
                        >
                          
                          <div
                            class="bp3-form-content"
                          >
                            <div
                              class="Layout---horizontal--3rmQ StyledProps---main--1Wws MultiTypeInput---main--AfQw"
                            >
                              <div
                                class="bp3-input-group MultiTypeInput---input--36mQ"
                              >
                                <input
                                  class="bp3-input"
                                  name="filePath[0].path"
                                  placeholder="Enter overrides file path"
                                  type="text"
                                  value=""
                                />
                              </div>
                              <span
                                class="bp3-popover-wrapper"
                              >
                                <span
                                  class="bp3-popover-target"
                                >
                                  <button
                                    class="MultiTypeInput---btn--1c9a MultiTypeInput---FIXED--18gu"
                                  >
                                    <span
                                      class="bp3-icon StyledProps---main--1Wws StyledProps---color--8PuS StyledProps---color-white--3AwB"
                                    >
                                      <svg
                                        height="12"
                                        viewBox="0 0 9 9"
                                        width="12"
                                      >
                                        <path
                                          d="M5.61 7.55c.62-.7.3-1.42.18-2.35a.32.32 0 01.1-.29l1.43-1.42a.76.76 0 01.28-.15c.39-.1 1 0 1.28-.29a.34.34 0 000-.51L6.46.12a.33.33 0 00-.52 0c-.28.29-.2.9-.28 1.3a.53.53 0 01-.13.23L4.09 3.12a.29.29 0 01-.28.09c-.89-.11-1.6-.49-2.27.11-.29.26-.29.43 0 .7l1.31 1.34.15.16-.15.15-2.7 2.69a.36.36 0 000 .54.36.36 0 00.54-.05l2.63-2.68.17-.17.17.16c.45.46.9.91 1.36 1.36.21.21.42.22.59.03z"
                                          fill="#009dff"
                                        />
                                      </svg>
                                    </span>
                                  </button>
                                </span>
                              </span>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                    <span>
                      <button
                        class="bp3-button bp3-minimal StyledProps---font--2ipy Button---button--4ZD5 StyledProps---main--1Wws addFileButton StyledProps---intent-primary--2Xgi"
                        type="button"
                      >
                        <span
                          class="bp3-button-text"
                        >
                          + Add File
                        </span>
                      </button>
                    </span>
                  </div>
                </div>
              </div>
              <div
                class="Layout---horizontal--3rmQ Layout---layout-spacing-large--3HvX StyledProps---main--1Wws"
              >
                <button
                  class="bp3-button StyledProps---font--2ipy Button---button--4ZD5 StyledProps---main--1Wws"
                  type="button"
                >
                  <span
                    class="bp3-button-text"
                  >
                    Back
                  </span>
                </button>
                <button
                  class="bp3-button StyledProps---font--2ipy Button---button--4ZD5 StyledProps---main--1Wws"
                  type="submit"
                >
                  <span
                    class="bp3-button-text"
                  >
                    Submit
                  </span>
                </button>
              </div>
            </form>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ManifestSelection tests can change artifact input type  without crashing: Second Step 1`] = `
<div>
  <div
    class="exampleWizard"
  >
    <div
      class="StepWizard---main--SGVz StepWizard---navBar--2KYu"
    >
      <div
        class="StepWizard---navBarList--2ILN"
      >
        <div
          class="StepWizard---navStep--2trN StepWizard---completedStep--3BLy"
        >
          <span
            class="bp3-icon bp3-icon-small-tick StyledProps---main--1Wws StyledProps---color--8PuS StyledProps---color-green500--2_VK"
            icon="small-tick"
          >
            <svg
              data-icon="small-tick"
              height="22"
              viewBox="0 0 20 20"
              width="22"
            >
              <desc>
                small-tick
              </desc>
              <path
                d="M15 5c-.28 0-.53.11-.71.29L8 11.59l-2.29-2.3a1.003 1.003 0 00-1.42 1.42l3 3c.18.18.43.29.71.29s.53-.11.71-.29l7-7A1.003 1.003 0 0015 5z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
          <p
            class="StyledProps---font--2ipy Text---lineclamp--qeDh StyledProps---main--1Wws StepWizard---stepName--2M52"
            style="--text-line-clamp: 2; width: 240px;"
          >
            SPECIFY MANIFEST SERVER
          </p>
        </div>
        <div
          class="StepWizard---navStep--2trN StepWizard---activeStep--9-9V"
        >
          <span
            class="StepWizard---number--1LKy"
          >
            2
          </span>
          <p
            class="StyledProps---font--2ipy Text---lineclamp--qeDh StyledProps---main--1Wws StepWizard---stepName--2M52"
            style="--text-line-clamp: 2; width: 240px;"
          >
            MANIFEST SOURCE
          </p>
        </div>
      </div>
      <div
        class="StepWizard---stepDetails--Uaxx"
      >
         
        <div
          class="Layout---vertical--3Szv Layout---layout-spacing-xxlarge--zgL2 StyledProps---main--1Wws StyledProps---padding-small--3f0A"
          style="height: 100%;"
        >
          <p
            class="StyledProps---font--2ipy StyledProps---main--1Wws StyledProps---font-medium--2b-0"
          >
            Configure Manifest Source
          </p>
          <div
            class="OverlaySpinner---overlaySpinner--3Bs3"
          >
            <form
              class="formContainer"
            >
              <div
                class="bp3-form-group"
              >
                <label
                  class="bp3-label"
                  for="identifier"
                >
                  Manifest Identifier
                   
                  <span
                    class="bp3-text-muted"
                  />
                </label>
                <div
                  class="bp3-form-content"
                >
                  <div
                    class="bp3-input-group"
                  >
                    <input
                      autocomplete="off"
                      class="bp3-input"
                      name="identifier"
                      placeholder="Give name to your manifest config"
                      type="text"
                      value=""
                    />
                  </div>
                </div>
              </div>
              <div
                class="bp3-form-group"
              >
                <label
                  class="bp3-label"
                  for="gitFetchType"
                >
                  Commit ID
                   
                  <span
                    class="bp3-text-muted"
                  />
                </label>
                <div
                  class="bp3-form-content"
                >
                  <div
                    class="bp3-popover-wrapper Select---main--1QpB bp3-fill"
                  >
                    <div
                      class="bp3-popover-target"
                    >
                      <div
                        class="bp3-input-group"
                      >
                        <input
                          autocomplete="off"
                          class="bp3-input"
                          name="gitFetchType"
                          placeholder="Search..."
                          style="padding-right: 0px;"
                          type="text"
                          value="Latest from Branch"
                        />
                        <span
                          class="bp3-input-action"
                        >
                          <span
                            class="bp3-icon bp3-icon-caret-down StyledProps---main--1Wws StyledProps---padding-small--3f0A"
                            icon="caret-down"
                          >
                            <svg
                              data-icon="caret-down"
                              height="14"
                              viewBox="0 0 16 16"
                              width="14"
                            >
                              <desc>
                                caret-down
                              </desc>
                              <path
                                d="M12 6.5c0-.28-.22-.5-.5-.5h-7a.495.495 0 00-.37.83l3.5 4c.09.1.22.17.37.17s.28-.07.37-.17l3.5-4c.08-.09.13-.2.13-.33z"
                                fill-rule="evenodd"
                              />
                            </svg>
                          </span>
                        </span>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="bp3-form-group"
              >
                <label
                  class="bp3-label"
                  for="branch"
                >
                  Branch
                   
                  <span
                    class="bp3-text-muted"
                  />
                </label>
                <div
                  class="bp3-form-content"
                >
                  <div
                    class="Layout---horizontal--3rmQ StyledProps---main--1Wws MultiTypeInput---main--AfQw"
                  >
                    <div
                      class="bp3-input-group MultiTypeInput---input--36mQ"
                    >
                      <input
                        class="bp3-input"
                        name="branch"
                        placeholder="Enter branch name here"
                        type="text"
                        value=""
                      />
                    </div>
                    <span
                      class="bp3-popover-wrapper"
                    >
                      <span
                        class="bp3-popover-target"
                      >
                        <button
                          class="MultiTypeInput---btn--1c9a MultiTypeInput---FIXED--18gu"
                        >
                          <span
                            class="bp3-icon StyledProps---main--1Wws StyledProps---color--8PuS StyledProps---color-white--3AwB"
                          >
                            <svg
                              height="12"
                              viewBox="0 0 9 9"
                              width="12"
                            >
                              <path
                                d="M5.61 7.55c.62-.7.3-1.42.18-2.35a.32.32 0 01.1-.29l1.43-1.42a.76.76 0 01.28-.15c.39-.1 1 0 1.28-.29a.34.34 0 000-.51L6.46.12a.33.33 0 00-.52 0c-.28.29-.2.9-.28 1.3a.53.53 0 01-.13.23L4.09 3.12a.29.29 0 01-.28.09c-.89-.11-1.6-.49-2.27.11-.29.26-.29.43 0 .7l1.31 1.34.15.16-.15.15-2.7 2.69a.36.36 0 000 .54.36.36 0 00.54-.05l2.63-2.68.17-.17.17.16c.45.46.9.91 1.36 1.36.21.21.42.22.59.03z"
                                fill="#009dff"
                              />
                            </svg>
                          </span>
                        </button>
                      </span>
                    </span>
                  </div>
                </div>
              </div>
              <div
                class="bp3-form-group"
              >
                <label
                  class="bp3-label"
                  for="filePath"
                >
                  <div
                    class="formLabel"
                  >
                    File / Folder Path
                    <div
                      class="bp3-popover-wrapper"
                    >
                      <div
                        class="bp3-popover-target typeSelector"
                      >
                        <button
                          class="bp3-button bp3-minimal StyledProps---font--2ipy Button---button--4ZD5 Button---iconOnly--_pvt StyledProps---main--1Wws btn"
                          type="button"
                        >
                          <span
                            class="bp3-button-text"
                          >
                            <span
                              class="bp3-icon StyledProps---main--1Wws icon fixed"
                            >
                              <svg
                                height="10"
                                viewBox="0 0 9 9"
                                width="10"
                              >
                                <path
                                  d="M5.61 7.55c.62-.7.3-1.42.18-2.35a.32.32 0 01.1-.29l1.43-1.42a.76.76 0 01.28-.15c.39-.1 1 0 1.28-.29a.34.34 0 000-.51L6.46.12a.33.33 0 00-.52 0c-.28.29-.2.9-.28 1.3a.53.53 0 01-.13.23L4.09 3.12a.29.29 0 01-.28.09c-.89-.11-1.6-.49-2.27.11-.29.26-.29.43 0 .7l1.31 1.34.15.16-.15.15-2.7 2.69a.36.36 0 000 .54.36.36 0 00.54-.05l2.63-2.68.17-.17.17.16c.45.46.9.91 1.36 1.36.21.21.42.22.59.03z"
                                  fill="#009dff"
                                />
                              </svg>
                            </span>
                            <span
                              class="btnText"
                            >
                              Fixed input list
                            </span>
                          </span>
                        </button>
                      </div>
                    </div>
                  </div>
                   
                  <span
                    class="bp3-text-muted"
                  />
                </label>
                <div
                  class="bp3-form-content"
                >
                  <p
                    class="StyledProps---font--2ipy StyledProps---main--1Wws fileHelpText"
                    style="display: flex; align-items: center;"
                  >
                    <span
                      class="bp3-icon bp3-icon-info-sign StyledProps---main--1Wws StyledProps---padding-small--3f0A StyledProps---color--8PuS StyledProps---color-blue450--6C4Y"
                      icon="info-sign"
                    >
                      <svg
                        data-icon="info-sign"
                        height="23"
                        viewBox="0 0 20 20"
                        width="23"
                      >
                        <desc>
                          info-sign
                        </desc>
                        <path
                          d="M10 0C4.48 0 0 4.48 0 10s4.48 10 10 10 10-4.48 10-10S15.52 0 10 0zM9 4h2v2H9V4zm4 12H7v-1h2V8H8V7h3v8h2v1z"
                          fill-rule="evenodd"
                        />
                      </svg>
                    </span>
                    <div>
                      Multiple files can be overlaid together. They are applied in the order specified - first one gets applied first, and the subsequent ones get layered in the order and overrides any previously specified values.
                    </div>
                  </p>
                  <div
                    class="Layout---vertical--3Szv StyledProps---main--1Wws"
                  >
                    <div
                      class="Layout---horizontal--3rmQ StyledProps---main--1Wws StyledProps---flex--2Jz8 StyledProps---flex-distribution-space-between--1TyN"
                      style="align-items: end;"
                    >
                      <div
                        class="Layout---horizontal--3rmQ Layout---layout-spacing-medium--3-Y8 StyledProps---main--1Wws"
                        draggable="true"
                        style="align-items: baseline;"
                      >
                        <div
                          class="bp3-form-group"
                          style="width: 330px;"
                        >
                          
                          <div
                            class="bp3-form-content"
                          >
                            <div
                              class="Layout---horizontal--3rmQ StyledProps---main--1Wws MultiTypeInput---main--AfQw"
                            >
                              <div
                                class="bp3-input-group MultiTypeInput---input--36mQ"
                              >
                                <input
                                  class="bp3-input"
                                  name="filePath[0].path"
                                  placeholder="Enter overrides file path"
                                  type="text"
                                  value=""
                                />
                              </div>
                              <span
                                class="bp3-popover-wrapper"
                              >
                                <span
                                  class="bp3-popover-target"
                                >
                                  <button
                                    class="MultiTypeInput---btn--1c9a MultiTypeInput---FIXED--18gu"
                                  >
                                    <span
                                      class="bp3-icon StyledProps---main--1Wws StyledProps---color--8PuS StyledProps---color-white--3AwB"
                                    >
                                      <svg
                                        height="12"
                                        viewBox="0 0 9 9"
                                        width="12"
                                      >
                                        <path
                                          d="M5.61 7.55c.62-.7.3-1.42.18-2.35a.32.32 0 01.1-.29l1.43-1.42a.76.76 0 01.28-.15c.39-.1 1 0 1.28-.29a.34.34 0 000-.51L6.46.12a.33.33 0 00-.52 0c-.28.29-.2.9-.28 1.3a.53.53 0 01-.13.23L4.09 3.12a.29.29 0 01-.28.09c-.89-.11-1.6-.49-2.27.11-.29.26-.29.43 0 .7l1.31 1.34.15.16-.15.15-2.7 2.69a.36.36 0 000 .54.36.36 0 00.54-.05l2.63-2.68.17-.17.17.16c.45.46.9.91 1.36 1.36.21.21.42.22.59.03z"
                                          fill="#009dff"
                                        />
                                      </svg>
                                    </span>
                                  </button>
                                </span>
                              </span>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                    <span>
                      <button
                        class="bp3-button bp3-minimal StyledProps---font--2ipy Button---button--4ZD5 StyledProps---main--1Wws addFileButton StyledProps---intent-primary--2Xgi"
                        type="button"
                      >
                        <span
                          class="bp3-button-text"
                        >
                          + Add File
                        </span>
                      </button>
                    </span>
                  </div>
                </div>
              </div>
              <div
                class="Layout---horizontal--3rmQ Layout---layout-spacing-large--3HvX StyledProps---main--1Wws"
              >
                <button
                  class="bp3-button StyledProps---font--2ipy Button---button--4ZD5 StyledProps---main--1Wws"
                  type="button"
                >
                  <span
                    class="bp3-button-text"
                  >
                    Back
                  </span>
                </button>
                <button
                  class="bp3-button StyledProps---font--2ipy Button---button--4ZD5 StyledProps---main--1Wws"
                  type="submit"
                >
                  <span
                    class="bp3-button-text"
                  >
                    Submit
                  </span>
                </button>
              </div>
            </form>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ManifestSelection tests renders without crashing 1`] = `
<div>
  <div
    class="exampleWizard"
  >
    <div
      class="StepWizard---main--SGVz StepWizard---navBar--2KYu"
    >
      <div
        class="StepWizard---navBarList--2ILN"
      >
        <div
          class="StepWizard---navStep--2trN StepWizard---activeStep--9-9V"
        >
          <span
            class="StepWizard---number--1LKy"
          >
            1
          </span>
          <p
            class="StyledProps---font--2ipy Text---lineclamp--qeDh StyledProps---main--1Wws StepWizard---stepName--2M52"
            style="--text-line-clamp: 2; width: 240px;"
          >
            SPECIFY MANIFEST SERVER
          </p>
        </div>
        <div
          class="StepWizard---navStep--2trN"
        >
          <span
            class="StepWizard---number--1LKy"
          >
            2
          </span>
          <p
            class="StyledProps---font--2ipy Text---lineclamp--qeDh StyledProps---main--1Wws StepWizard---stepName--2M52"
            style="--text-line-clamp: 2; width: 240px;"
          >
            MANIFEST SOURCE
          </p>
        </div>
      </div>
      <div
        class="StepWizard---stepDetails--Uaxx"
      >
         
        <div
          class="Layout---vertical--3Szv Layout---layout-spacing-xxlarge--zgL2 StyledProps---main--1Wws StyledProps---padding-small--3f0A"
          style="height: 100%;"
        >
          <p
            class="StyledProps---font--2ipy StyledProps---main--1Wws StyledProps---font-medium--2b-0"
          >
            MANIFEST SOURCE
          </p>
          <div
            class="OverlaySpinner---overlaySpinner--3Bs3"
          >
            <form
              class="formContainerStepOne"
            >
              <div
                class="Layout---horizontal--3rmQ Layout---layout-spacing-large--3HvX StyledProps---main--1Wws"
                style="align-items: center;"
              >
                <div
                  class="bp3-form-group"
                >
                  <label
                    class="bp3-label"
                    for="gitServer"
                  >
                    GIT Server
                     
                    <span
                      class="bp3-text-muted"
                    />
                  </label>
                  <div
                    class="bp3-form-content"
                  >
                    <div
                      class="Layout---horizontal--3rmQ StyledProps---main--1Wws MultiTypeInput---main--AfQw"
                      style="width: 400px;"
                    >
                      <span
                        class="bp3-popover-wrapper"
                      >
                        <span
                          class="bp3-popover-target"
                        >
                          <button
                            class="bp3-button bp3-minimal StyledProps---font--2ipy Button---button--4ZD5 Button---iconOnly--_pvt StyledProps---main--1Wws container"
                            style="width: 372px;"
                            type="button"
                          >
                            <span
                              class="bp3-button-text"
                            >
                              <span
                                class="placeholder"
                              >
                                Select GIT Server
                              </span>
                            </span>
                            <span
                              class="bp3-icon bp3-icon-caret-down StyledProps---main--1Wws"
                              icon="caret-down"
                            >
                              <svg
                                data-icon="caret-down"
                                height="16"
                                viewBox="0 0 16 16"
                                width="16"
                              >
                                <desc>
                                  caret-down
                                </desc>
                                <path
                                  d="M12 6.5c0-.28-.22-.5-.5-.5h-7a.495.495 0 00-.37.83l3.5 4c.09.1.22.17.37.17s.28-.07.37-.17l3.5-4c.08-.09.13-.2.13-.33z"
                                  fill-rule="evenodd"
                                />
                              </svg>
                            </span>
                          </button>
                        </span>
                      </span>
                      <span
                        class="bp3-popover-wrapper"
                      >
                        <span
                          class="bp3-popover-target"
                        >
                          <button
                            class="MultiTypeInput---btn--1c9a MultiTypeInput---FIXED--18gu"
                          >
                            <span
                              class="bp3-icon StyledProps---main--1Wws StyledProps---color--8PuS StyledProps---color-white--3AwB"
                            >
                              <svg
                                height="12"
                                viewBox="0 0 9 9"
                                width="12"
                              >
                                <path
                                  d="M5.61 7.55c.62-.7.3-1.42.18-2.35a.32.32 0 01.1-.29l1.43-1.42a.76.76 0 01.28-.15c.39-.1 1 0 1.28-.29a.34.34 0 000-.51L6.46.12a.33.33 0 00-.52 0c-.28.29-.2.9-.28 1.3a.53.53 0 01-.13.23L4.09 3.12a.29.29 0 01-.28.09c-.89-.11-1.6-.49-2.27.11-.29.26-.29.43 0 .7l1.31 1.34.15.16-.15.15-2.7 2.69a.36.36 0 000 .54.36.36 0 00.54-.05l2.63-2.68.17-.17.17.16c.45.46.9.91 1.36 1.36.21.21.42.22.59.03z"
                                  fill="#009dff"
                                />
                              </svg>
                            </span>
                          </button>
                        </span>
                      </span>
                    </div>
                  </div>
                </div>
                <button
                  class="bp3-button bp3-minimal StyledProps---font--2ipy Button---button--4ZD5 StyledProps---main--1Wws StyledProps---intent-primary--2Xgi"
                  type="button"
                >
                  <span
                    class="bp3-icon bp3-icon-plus StyledProps---main--1Wws StyledProps---padding-right-xsmall--3D04"
                    icon="plus"
                  >
                    <svg
                      data-icon="plus"
                      height="16"
                      viewBox="0 0 16 16"
                      width="16"
                    >
                      <desc>
                        plus
                      </desc>
                      <path
                        d="M13 7H9V3c0-.55-.45-1-1-1s-1 .45-1 1v4H3c-.55 0-1 .45-1 1s.45 1 1 1h4v4c0 .55.45 1 1 1s1-.45 1-1V9h4c.55 0 1-.45 1-1s-.45-1-1-1z"
                        fill-rule="evenodd"
                      />
                    </svg>
                  </span>
                  <span
                    class="bp3-button-text"
                  >
                    New Manifest Server
                  </span>
                </button>
              </div>
              <div
                class="Layout---horizontal--3rmQ Layout---layout-spacing-large--3HvX StyledProps---main--1Wws bottomButtons"
              >
                <button
                  class="bp3-button StyledProps---font--2ipy Button---button--4ZD5 StyledProps---main--1Wws"
                  type="submit"
                >
                  <span
                    class="bp3-button-text"
                  >
                    Save and Continue
                  </span>
                </button>
              </div>
            </form>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
